--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       - MODE=master
       - PORT=7077
       - WEBPORT=8080
+    network_mode: host
 
   spark-worker1:
     build:
@@ -31,6 +32,7 @@ services:
       - CORES=2
       - MEM=1G
       - SPARK_MASTER_URL=spark://spark-master:7077
+    network_mode: host
 
   spark-worker2:
     build:
@@ -47,6 +49,7 @@ services:
       - CORES=2
       - MEM=1G
       - SPARK_MASTER_URL=spark://spark-master:7077
+    network_mode: host
 
   notebook:
     build:
@@ -60,3 +63,4 @@ services:
     environment:
       - MODE=notebook
       - PORT=4041
+    network_mode: host
